logs/mgz.log
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/construct'...
Listing './lib/python3.5/site-packages/construct/examples'...
Listing './lib/python3.5/site-packages/construct/examples/formats'...
Listing './lib/python3.5/site-packages/construct/examples/formats/data'...
Listing './lib/python3.5/site-packages/construct/examples/formats/executable'...
Listing './lib/python3.5/site-packages/construct/examples/formats/filesystem'...
Listing './lib/python3.5/site-packages/construct/examples/formats/graphics'...
Listing './lib/python3.5/site-packages/construct/examples/protocols'...
Listing './lib/python3.5/site-packages/construct/lib'...
Listing './lib/python3.5/site-packages/construct-2.8.21.egg-info'...
Listing './lib/python3.5/site-packages/et_xmlfile'...
Listing './lib/python3.5/site-packages/et_xmlfile/tests'...
Listing './lib/python3.5/site-packages/et_xmlfile-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/jdcal-1.3.egg-info'...
Listing './lib/python3.5/site-packages/mgz'...
Listing './lib/python3.5/site-packages/mgz/body'...
Listing './lib/python3.5/site-packages/mgz/header'...
Listing './lib/python3.5/site-packages/mgz/recorded_game'...
Listing './lib/python3.5/site-packages/mgz-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/odf'...
Listing './lib/python3.5/site-packages/odfpy-1.3.6.egg-info'...
Listing './lib/python3.5/site-packages/openpyxl'...
Listing './lib/python3.5/site-packages/openpyxl/cell'...
Listing './lib/python3.5/site-packages/openpyxl/chart'...
Listing './lib/python3.5/site-packages/openpyxl/chartsheet'...
Listing './lib/python3.5/site-packages/openpyxl/comments'...
Listing './lib/python3.5/site-packages/openpyxl/compat'...
Listing './lib/python3.5/site-packages/openpyxl/descriptors'...
Listing './lib/python3.5/site-packages/openpyxl/drawing'...
Listing './lib/python3.5/site-packages/openpyxl/formatting'...
Listing './lib/python3.5/site-packages/openpyxl/formula'...
Listing './lib/python3.5/site-packages/openpyxl/packaging'...
Listing './lib/python3.5/site-packages/openpyxl/reader'...
Listing './lib/python3.5/site-packages/openpyxl/styles'...
Listing './lib/python3.5/site-packages/openpyxl/utils'...
Listing './lib/python3.5/site-packages/openpyxl/workbook'...
Listing './lib/python3.5/site-packages/openpyxl/workbook/external_link'...
Listing './lib/python3.5/site-packages/openpyxl/worksheet'...
Listing './lib/python3.5/site-packages/openpyxl/writer'...
Listing './lib/python3.5/site-packages/openpyxl/xml'...
Listing './lib/python3.5/site-packages/openpyxl-2.4.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/idna'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.12.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_cache'...
Listing './lib/python3.5/site-packages/requests_cache/backends'...
Listing './lib/python3.5/site-packages/requests_cache/backends/storage'...
Listing './lib/python3.5/site-packages/requests_cache-0.4.13.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tablib'...
Listing './lib/python3.5/site-packages/tablib/formats'...
Listing './lib/python3.5/site-packages/tablib/packages'...
Listing './lib/python3.5/site-packages/tablib/packages/dbfpy'...
Compiling './lib/python3.5/site-packages/tablib/packages/dbfpy/dbfnew.py'...
***   File "./lib/python3.5/site-packages/tablib/packages/dbfpy/dbfnew.py", line 163
    print "*** created tst.dbf: ***"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tablib/packages/dbfpy3'...
Listing './lib/python3.5/site-packages/tablib-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/unicodecsv'...
Listing './lib/python3.5/site-packages/unicodecsv-0.14.1.egg-info'...
Listing './lib/python3.5/site-packages/voobly'...
Listing './lib/python3.5/site-packages/voobly-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/xlwt'...
Listing './lib/python3.5/site-packages/xlwt-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
